new logos added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1383,11 +1383,70 @@
               <img src="assets/images/mamoru.png" alt="" />
               <img src="assets/images/mamoru.png" alt="" /></li
           ></a>
+          <a href="https://polygon.technology/">
+            <li>
+              <img src="assets/images/polygon.png" alt="" />
+              <img src="assets/images/polygon.png" alt="" /></li
+          ></a>
           <a href="https://stabit.ae/">
             <li>
               <img src="assets/images/stabit.svg" alt="" />
               <img src="assets/images/stabit.svg" alt="" /></li
           ></a>
+          <a href="https://www.chaingpt.org/">
+            <li>
+              <img src="assets/images/chaingpt.png" alt="" />
+              <img src="assets/images/chaingpt.png" alt="" /></li
+          ></a>
+          <a href="https://oct.network/">
+            <li>
+              <img src="assets/images/octopus-network-oct-logo.png" alt="" />
+              <img
+                src="assets/images/octopus-network-oct-logo.png"
+                alt=""
+              /></li
+          ></a>
+          <a href="https://www.uforika.io/">
+            <li>
+              <img src="assets/images/uforika.png" alt="" />
+              <img src="assets/images/uforika.png" alt="" /></li
+          ></a>
+          <a href="https://www.oasislabs.com/">
+            <li>
+              <img src="assets/images/oasis_labs.png" alt="" />
+              <img src="assets/images/oasis_labs.png" alt="" /></li
+          ></a>
+          <a href="https://www.valhallanetwork.io/">
+            <li>
+              <img src="assets/images/valhalla.jpg" alt="" />
+              <img src="assets/images/valhalla.jpg" alt="" /></li
+          ></a>
+          <a href="https://mfet.earth/">
+            <li>
+              <img src="assets/images/mfet.jpg" alt="" />
+              <img src="assets/images/mfet.jpg" alt="" /></li
+          ></a>
+          <a href="https://novaratio.tech">
+            <li>
+              <img src="assets/images/nova-ratio.png" alt="" />
+              <img src="assets/images/nova-ratio.png" alt="" /></li
+          ></a>
+          <a href="">
+            <li>
+              <img src="assets/images/artiox.png" alt="" />
+              <img src="assets/images/artiox.png" alt="" /></li
+          ></a>
+          <a href="">
+            <li>
+              <img src="assets/images/HeteroMeta.png" alt="" />
+              <img src="assets/images/HeteroMeta.png" alt="" /></li
+          ></a>
+          <a href="">
+            <li>
+              <img src="assets/images/cbf-logo-01.png" alt="" />
+              <img src="assets/images/cbf-logo-01.png" alt="" /></li
+          ></a>
+
           <!-- <li> <img src="assets/images/2.png" alt=""> <img src="assets/images/2-2.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="images/3-3.png" alt=""> </li>
               <li> <img src="assets/images/3.png" alt=""> <img src="assets/images/3.png" alt=""> </li>
@@ -1456,7 +1515,7 @@
       <div class="our-clients">
         <br />
         <div class="meeta-section-title-2 text-center">
-          <h2 class="main-title">Media Partners</h2>
+          <h2 class="main-title">Past Media Partners</h2>
         </div>
         <ul>
           <!-- <a href="https://tr.cointelegraph.com/"> <li>  <img src="assets/images/coinTelegraph.jpeg" alt=""> <img src="assets/images/coinTelegraph.jpeg" alt=""> </li></a>
@@ -1464,8 +1523,23 @@
                 <a href="https://coinkolik.com/"> <li>  <img src="assets/images/coinkolik.png" alt=""> <img src="assets/images/coinkolik.png" alt=""> </li></a> -->
           <a href="https://coinkolik.com/">
             <li>
+              <img src="assets/images/cointelegraph.png" alt="" />
+              <img src="assets/images/cointelegraph.png" alt="" /></li
+          ></a>
+          <a href="https://coinkolik.com/">
+            <li>
               <img src="assets/images/coinkolik-turuncu.png" alt="" />
               <img src="assets/images/coinkolik-turuncu.png" alt="" /></li
+          ></a>
+          <a href="https://www.coindeskturkiye.com/">
+            <li>
+              <img src="assets/images/CoinDesk_logo.svg.png" alt="" />
+              <img src="assets/images/CoinDesk_logo.svg.png" alt="" /></li
+          ></a>
+          <a href="https://www.btchaber.com/">
+            <li>
+              <img src="assets/images/btc-haber.png" alt="" />
+              <img src="assets/images/btc-haber.png" alt="" /></li
           ></a>
           <a href="https://www.coinbilgi.net/">
             <li>
@@ -1487,6 +1561,11 @@
             <li>
               <img src="assets/images/kriptokoin.png" alt="" />
               <img src="assets/images/kriptokoin.png" alt="" /></li
+          ></a>
+          <a href="https://www.coin-talks.com/">
+            <li>
+              <img src="assets/images/coinTalks.png" alt="" />
+              <img src="assets/images/coinTalks.png" alt="" /></li
           ></a>
           <a href="https://kriptoarena.com/">
             <li>
@@ -1512,6 +1591,32 @@
             <li>
               <img src="assets/images/jci-b.jpeg" alt="" />
               <img src="assets/images/jci-b.jpeg" alt="" /></li
+          ></a>
+          <a href="https://cryptodataspace.com/">
+            <li>
+              <img src="assets/images/__CDS Horizontal Logo.png" alt="" />
+              <img src="assets/images/__CDS Horizontal Logo.png" alt="" /></li
+          ></a>
+          <a href="https://www.merkeziyetsizhaber.com/">
+            <li>
+              <img src="assets/images/Merkeziyetsiz Haber5.png" alt="" />
+              <img src="assets/images/Merkeziyetsiz Haber5.png" alt="" /></li
+          ></a>
+          <a href="">
+            <li>
+              <img
+                src="assets/images/poloniex-social-Light-profile-180px.png"
+                alt=""
+              />
+              <img
+                src="assets/images/poloniex-social-Light-profile-180px.png"
+                alt=""
+              /></li
+          ></a>
+          <a href="">
+            <li>
+              <img src="assets/images/airdrop-tr.jpg" alt="" />
+              <img src="assets/images/airdrop-tr.jpg" alt="" /></li
           ></a>
         </ul>
       </div>
