--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -14,7 +14,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/images/adc.png"
+      href="assets/images/ab-logo.png"
     />
 
     <!-- Google Fonts -->
