new partner added

--- a/ABSummit/gallery.html
+++ b/ABSummit/gallery.html
@@ -89,7 +89,7 @@
                                             <li><a href="schedule.html">Event Schedule</a></li>
                                             <li><a href="speaker-one.html">Speakers 01</a></li>
                                             <li><a href="speaker-two.html">Speakers 02</a></li>
-                                            <li><a href="speaker-single.html">Speaker Single</a></li> 
+                                            <li><a href="speaker-single.html">Speaker Single</a></li>
                                             <li><a class="active" href="gallery.html">Gallery</a></li>
                                             <li><a href="price.html">Pricing</a></li>
                                             <li><a href="faq.html">FAQ's</a></li>
@@ -578,3 +578,62 @@
 </body>
 
 </html>
+
+
+  <!-- Gallery Start -->
+
+  <!-- Gallery End -->
+</div>
+
+
+// yeni galeri
+<div class="container" style="margin-bottom: 150px;">
+    <h1>Past Events Gallery</h1>
+    <div class="top-content">
+      <h3 class="gallery">Photo Gallery</h3>
+      <label for="check1">All Photos</label>
+      <label for="check2">Anatolian Blockchain Meetup 1.0</label>
+      <label for="check3">Anatolian Blockchain Meetup 2.0</label>
+      <label for="check4">EDCON2023 Side Event</label>
+
+    </div>
+
+    <div class="photo-gallery">
+      <div class="pic place">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic family">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic child">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic place">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic family">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic child">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic place">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic family">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic child">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic place">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic family">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+      <div class="pic child">
+        <img src="assets/images/blog/anatolianMeetupPhoto.png" alt="">
+      </div>
+    </div>
+  </div>
