new sponsor added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1228,6 +1228,16 @@
       <!-- Event Sponsors End -->
       <div id="Sponsors" class="our-clients">
         <br />
+         <div class="meeta-section-title-2 text-center">
+          <h2 class="main-title">Diamond Sponsors</h2>
+            <ul>
+          <a href="https://www.bitmart.com/">
+            <li>
+              <img src="assets/images/Bitmart.svg" alt="" />
+              <img src="assets/images/Bitmart.svg" alt="" /></li
+          ></a>
+            </ul>
+        </div>
         <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Past Event Sponsors</h2>
         </div>
