--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1239,6 +1239,16 @@
             </ul>
         </div>
         <div class="meeta-section-title-2 text-center">
+          <h2 class="main-title">Bronze Sponsors</h2>
+            <ul>
+              <a href="https://datsproject.io/">
+                <li>
+                  <img src="assets/images/datsp.jpg" alt="" />
+                  <img src="assets/images/datsp.jpg" alt="" /></li
+              ></a>
+            </ul>
+        </div>
+        <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Past Event Sponsors</h2>
         </div>
         <ul>
