--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1707,6 +1707,44 @@
               </div>
             </div>
           </div>
+          <div class="column" style="margin-top: 20px">
+            <div class="card">
+              <div class="img-container">
+                <img src="assets/images/hikmetcan (1).jpeg" />
+              </div>
+              <h3>Hikmetcan Altaş</h3>
+              <!-- <p>Designer</p> -->
+              <div class="icons">
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a  href="#">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="column" style="margin-top: 20px">
+            <div class="card">
+              <div class="img-container">
+                <img src="assets/images/yusuf-simsek.jpeg" />
+              </div>
+              <h3>Yusuf Şimşek</h3>
+              <!-- <p>Designer</p> -->
+              <div class="icons">
+                <a href="#">
+                  <i class="fab fa-twitter"></i>
+                </a>
+                <a  href="#">
+                  <i class="fab fa-linkedin"></i>
+                </a>
+
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
