--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1533,7 +1533,7 @@
       <div class="our-clients">
         <br />
         <div class="meeta-section-title-2 text-center">
-          <h2 class="main-title">Supporting Organizations</h2>
+          <h2 class="main-title">Past Supporting Organizations</h2>
         </div>
         <ul>
           <a href="https://www.twitter.com/ankarachain/">
