--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1419,6 +1419,16 @@
               <img src="assets/images/utilify_logo_PNG.png" alt="" />
               <img src="assets/images/utilify_logo_PNG.png" alt="" /></li
           ></a>
+          <a href="https://www.coinoxs.com/">
+            <li>
+              <img src="assets/images/coinox.svg" alt="" />
+              <img src="assets/images/coinox.svg" alt="" /></li
+          ></a>
+          <a href="#">
+            <li>
+              <img src="assets/images/market-monster.png" alt="" />
+              <img src="assets/images/market-monster.png" alt="" /></li
+          ></a>
         </ul>
       </div>
       <div class="our-clients">
