--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -2270,14 +2270,14 @@
                         <span class="date">22 August</span>
                         <p>IBW Side Event</p>
                         <div class="footer-widget-social" style="margin-left: 85px;">
-                          <a href="https://www.instagram.com/cankayablockchain/"
+                          <a href="https://www.instagram.com/anatolianblockchaincom/"
                             ><i class="fab fa-instagram"></i
                           ></a>
-                          <a href="https://twitter.com/cankayachain"
+                          <a href="https://twitter.com/anatolianchain"
                             ><i class="fab fa-twitter"></i
                           ></a>
                           <a
-                            href="https://www.linkedin.com/company/cankayablockchain"
+                            href="https://www.linkedin.com/company/anatolianblockchain"
                             ><i class="fab fa-linkedin"></i
                           ></a>
                         </div>
