--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1429,6 +1429,11 @@
               <img src="assets/images/market-monster.png" alt="" />
               <img src="assets/images/market-monster.png" alt="" /></li
           ></a>
+          <a href="https://cryptops.io/">
+            <li>
+              <img src="assets/images/cryptops.png" alt="" />
+              <img src="assets/images/cryptops.png" alt="" /></li
+          ></a>
         </ul>
       </div>
       <div class="our-clients">
