--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1434,6 +1434,11 @@
               <img src="assets/images/cryptops.png" alt="" />
               <img src="assets/images/cryptops.png" alt="" /></li
           ></a>
+          <a href="https://www.kriptoetkinlik.com/">
+            <li>
+              <img src="assets/images/kripto_etkinlik.png" alt="" />
+              <img src="assets/images/kripto_etkinlik.png" alt="" /></li
+          ></a>
         </ul>
       </div>
       <div class="our-clients">
