--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1439,6 +1439,11 @@
               <img src="assets/images/respect-trade.png" alt="" />
               <img src="assets/images/respect-trade.png" alt="" /></li
           ></a>
+          <a href="https://solversedigital.com/">
+            <li>
+              <img src="assets/images/Solverse Digital DARK.png" alt="" />
+              <img src="assets/images/Solverse Digital DARK.png" alt="" /></li
+          ></a>
 
         </ul>
       </div>
@@ -1552,6 +1557,11 @@
             <li>
               <img src="assets/images/kripto_etkinlik.png" alt="" />
               <img src="assets/images/kripto_etkinlik.png" alt="" /></li
+          ></a>
+          <a href="https://feederblock.com/">
+            <li>
+              <img src="assets/images/FeederBlock DARK.png" alt="" />
+              <img src="assets/images/FeederBlock DARK.png" alt="" /></li
           ></a>
         </ul>
       </div>
