new partner added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1460,6 +1460,11 @@
               <img src="assets/images/Solverse Digital DARK.png" alt="" />
               <img src="assets/images/Solverse Digital DARK.png" alt="" /></li
           ></a>
+          <a href="https://finceptor.app/">
+            <li>
+              <img src="assets/images/finceptor.png" alt="" />
+              <img src="assets/images/finceptor.png" alt="" /></li
+          ></a>
 
         </ul>
       </div>
