--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1584,6 +1584,11 @@
               <img src="assets/images/FeederBlock DARK.png" alt="" />
               <img src="assets/images/FeederBlock DARK.png" alt="" /></li
           ></a>
+          <a href="https://www.cryptoktv.com/">
+            <li>
+              <img src="assets/images/CryptoTV-black.jpg" alt="" />
+              <img src="assets/images/CryptoTV-black.jpg" alt="" /></li
+          ></a>
         </ul>
       </div>
 
