--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1471,7 +1471,7 @@
       <div class="our-clients">
         <br />
         <div class="meeta-section-title-2 text-center">
-          <h2 class="main-title">Past Media Partners</h2>
+          <h2 class="main-title"> Media Partners</h2>
         </div>
         <ul>
           <!-- <a href="https://tr.cointelegraph.com/"> <li>  <img src="assets/images/coinTelegraph.jpeg" alt=""> <img src="assets/images/coinTelegraph.jpeg" alt=""> </li></a>
