--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -282,7 +282,7 @@
                   22 August, İstanbul
                 </p>
                 <h2 class="title" data-aos-delay="800" data-aos="fade-up">
-                  Anatolian Blockchain <br />
+                 Toobit Anatolian Blockchain <br />
                   <span>IBW Side Event</span>
                 </h2>
                 <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
@@ -333,7 +333,7 @@
                 <div class="meeta-section-title-2">
                   <h4 class="sub-title">About Event</h4>
                   <h2 class="main-title">
-                    Anatolian Blockchain Crypto Connect
+                   Toobit Anatolian Blockchain Crypto Connect
                   </h2>
                 </div>
                 <!-- Section Title End -->
