new sponsor added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1256,6 +1256,11 @@
                   <img src="assets/images/datsp.jpg" alt="" />
                   <img src="assets/images/datsp.jpg" alt="" /></li
               ></a>
+              <a href="https://www.portuma.com/">
+                <li>
+                  <img src="assets/images/Portuma-Logo-black (1).svg" alt="" />
+                  <img src="assets/images/Portuma-Logo-black (1).svg" alt="" /></li
+              ></a>
             </ul>
         </div>
         <div class="meeta-section-title-2 text-center">
@@ -1464,6 +1469,11 @@
             <li>
               <img src="assets/images/finceptor.png" alt="" />
               <img src="assets/images/finceptor.png" alt="" /></li
+          ></a>
+          <a href="https://yulalabs.com/">
+            <li>
+              <img src="assets/images/yula-logo.svg" alt="" />
+              <img src="assets/images/yula-logo.svg" alt="" /></li
           ></a>
 
         </ul>
