--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1403,12 +1403,12 @@
               <img src="assets/images/utilify_logo_PNG.png" alt="" />
               <img src="assets/images/utilify_logo_PNG.png" alt="" /></li
           ></a>
-
-          <a href="https://twitter.com/ethistanbul">
+          <a href="https://yulalabs.com/">
             <li>
-              <img src="assets/images/ethistanbul.jpg" alt="" />
-              <img src="assets/images/ethistanbul.jpg" alt="" /></li
+              <img src="assets/images/yula-logo.svg" alt="" />
+              <img src="assets/images/yula-logo.svg" alt="" /></li
           ></a>
+
           <a href="https://twitter.com/web3dernegi">
             <li>
               <img src="assets/images/web3dernegi.jpg" alt="" />
@@ -1470,10 +1470,11 @@
               <img src="assets/images/finceptor.png" alt="" />
               <img src="assets/images/finceptor.png" alt="" /></li
           ></a>
-          <a href="https://yulalabs.com/">
+
+          <a href="https://twitter.com/ethistanbul">
             <li>
-              <img src="assets/images/yula-logo.svg" alt="" />
-              <img src="assets/images/yula-logo.svg" alt="" /></li
+              <img src="assets/images/ethistanbul.jpg" alt="" />
+              <img src="assets/images/ethistanbul.jpg" alt="" /></li
           ></a>
 
         </ul>
@@ -1596,8 +1597,8 @@
           ></a>
           <a href="https://www.cryptoktv.com/">
             <li>
-              <img src="assets/images/CryptoTV-black.jpg" alt="" />
-              <img src="assets/images/CryptoTV-black.jpg" alt="" /></li
+              <img src="assets/images/CryptoTV-final-2-01.png" alt="" />
+              <img src="assets/images/CryptoTV-final-2-01.png" alt="" /></li
           ></a>
         </ul>
       </div>
