--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1261,6 +1261,11 @@
                   <img src="assets/images/Portuma-Logo-black (1).svg" alt="" />
                   <img src="assets/images/Portuma-Logo-black (1).svg" alt="" /></li
               ></a>
+              <a href="https://www.portuma.com/">
+                <li>
+                  <img src="assets/images/lendexlogo 1.2.png" alt="" />
+                  <img src="assets/images/lendexlogo 1.2.png" alt="" /></li
+              ></a>
             </ul>
         </div>
         <div class="meeta-section-title-2 text-center">
