--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1261,7 +1261,7 @@
                   <img src="assets/images/Portuma-Logo-black (1).svg" alt="" />
                   <img src="assets/images/Portuma-Logo-black (1).svg" alt="" /></li
               ></a>
-              <a href="https://www.portuma.com/">
+              <a href="https://lendx.finance/">
                 <li>
                   <img src="assets/images/lendexlogo 1.2.png" alt="" />
                   <img src="assets/images/lendexlogo 1.2.png" alt="" /></li
