--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -279,11 +279,11 @@
             <div class="col-lg-12">
               <div class="meeta-hero-content text-center">
                 <p class="text" data-aos-delay="700" data-aos="fade-up">
-                  22 August, İstanbul
+                  2 October, İstanbul
                 </p>
                 <h2 class="title" data-aos-delay="800" data-aos="fade-up">
-                 Toobit Anatolian Blockchain <br />
-                  <span>IBW Side Event</span>
+                  Anatolian Blockchain <br />
+                  <span>Cosmoverse Side Event</span>
                 </h2>
                 <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
                   <a class="btn-2" href="https://docs.google.com/forms/d/e/1FAIpQLScnCoaBodwSO3buUyupwgyshn7BNLzDEXyC83ZKtW_z_vAaYQ/viewform">Register Now</a>
@@ -790,7 +790,7 @@
                   <li data-tab-target="#tab1" class="active">
                     <div class="meeta-event-schedule-time">
                       <h4 class="meeta-event-schedule-day">Day 1</h4>
-                      <p>August 22, 2023</p>
+                      <p>October 2, 2023</p>
                     </div>
                   </li>
                   <!-- <li data-tab-target="#tab2" class="tab">
@@ -1228,7 +1228,7 @@
       <!-- Event Sponsors End -->
       <div id="Sponsors" class="our-clients">
         <br />
-        <div class="meeta-section-title-2 text-center">
+        <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Main Sponsor</h2>
             <ul>
           <a href="https://www.toobit.com/">
@@ -1237,8 +1237,8 @@
               <img src="assets/images/Toobit-logo.png" alt="" /></li
           ></a>
             </ul>
-        </div>
-         <div class="meeta-section-title-2 text-center">
+        </div> -->
+         <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Diamond Sponsors</h2>
             <ul>
           <a href="https://www.bitmart.com/">
@@ -1247,8 +1247,8 @@
               <img src="assets/images/Bitmart.svg" alt="" /></li
           ></a>
             </ul>
-        </div>
-        <div class="meeta-section-title-2 text-center">
+        </div> -->
+        <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Bronze Sponsors</h2>
             <ul>
               <a href="https://datsproject.io/">
@@ -1267,11 +1267,31 @@
                   <img src="assets/images/lendexlogo 1.2.png" alt="" /></li
               ></a>
             </ul>
-        </div>
+        </div> -->
         <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Past Event Sponsors</h2>
         </div>
         <ul>
+            <a href="https://www.toobit.com/">
+            <li>
+              <img src="assets/images/Toobit-logo.png" alt="" />
+              <img src="assets/images/Toobit-logo.png" alt="" /></li
+          ></a>
+          <a href="https://www.bitmart.com/">
+            <li>
+              <img src="assets/images/Bitmart.svg" alt="" />
+              <img src="assets/images/Bitmart.svg" alt="" /></li
+          ></a>
+          <a href="https://www.portuma.com/">
+            <li>
+              <img src="assets/images/Portuma-Logo-black (1).svg" alt="" />
+              <img src="assets/images/Portuma-Logo-black (1).svg" alt="" /></li
+          ></a>
+          <a href="https://lendx.finance/">
+            <li>
+              <img src="assets/images/lendexlogo 1.2.png" alt="" />
+              <img src="assets/images/lendexlogo 1.2.png" alt="" /></li
+          ></a>
           <a href="https://datsproject.io/">
             <li>
               <img src="assets/images/datsp.jpg" alt="" />
@@ -2335,8 +2355,8 @@
                       <!-- Footer Info Start -->
                       <div class="footer-info">
                         <h3 class="title">Event Details</h3>
-                        <span class="date">22 August</span>
-                        <p>IBW Side Event</p>
+                        <span class="date">2 October</span>
+                        <p>Cosmoverse Side Event</p>
                         <div class="footer-widget-social" style="margin-left: 85px;">
                           <a href="https://www.instagram.com/anatolianblockchaincom/"
                             ><i class="fab fa-instagram"></i
