--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -333,7 +333,7 @@
                 <div class="meeta-section-title-2">
                   <h4 class="sub-title">About Event</h4>
                   <h2 class="main-title">
-                   Toobit Anatolian Blockchain Crypto Connect
+                   Anatolian Blockchain Crypto Connect II
                   </h2>
                 </div>
                 <!-- Section Title End -->
