--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -341,15 +341,15 @@
                 <!-- About Content Start -->
                 <div class="meeta-about-content">
                   <p>
-                    Anatolian Blockchain Crypto Connect is a special side event
-                    of Istanbul Blockchain Week. This event provides an
+                    Anatolian Blockchain Crypto Connect II is a special side event
+                    of Cosmoverse 2023. This event provides an
                     opportunity for project owners, entrepreneurs, investors,
                     and valuable individuals from the crypto ecosystem to come
                     together and network. The event aims to offer an enjoyable
                     experience with a dynamic program taking place from 7 pm to
                     11 pm. Don't miss this opportunity to showcase your
                     projects, meet investors, and expand your network. We bring
-                    the energy and excitement of Istanbul Blockchain Week to our
+                    the energy and excitement of Cosmoverse to our
                     side event! Don't miss out on this opportunity to directly
                     interact with these experienced individuals!
                   </p>
