--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1574,11 +1574,11 @@
               <img src="assets/images/kriptoks.png" alt="" />
               <img src="assets/images/kriptoks.png" alt="" /></li
           ></a>
-          <a href="https://etkinkampus.com/">
+          <!-- <a href="https://etkinkampus.com/">
             <li>
               <img src="assets/images/etkinkampüs.png" alt="" />
               <img src="assets/images/etkinkampüs.png" alt="" /></li
-          ></a>
+          ></a> -->
           <a href="https://www.jciturkiye.org/">
             <li>
               <img src="assets/images/jci-b.jpeg" alt="" />
