--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1228,16 +1228,16 @@
       <!-- Event Sponsors End -->
       <div id="Sponsors" class="our-clients">
         <br />
-        <!-- <div class="meeta-section-title-2 text-center">
-          <h2 class="main-title">Main Sponsor</h2>
+         <div class="meeta-section-title-2 text-center">
+          <h2 class="main-title">Bronze Sponsors</h2>
             <ul>
-          <a href="https://www.toobit.com/">
+          <a href="https://datsproject.io/">
             <li>
-              <img src="assets/images/Toobit-logo.png" alt="" />
-              <img src="assets/images/Toobit-logo.png" alt="" /></li
+              <img src="assets/images/datsp.jpg" alt="" />
+              <img src="assets/images/datsp.jpg" alt="" /></li
           ></a>
             </ul>
-        </div> -->
+        </div>
          <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Diamond Sponsors</h2>
             <ul>
