--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -126,7 +126,7 @@
               <!-- Header Meta Start -->
               <div class="header-meta">
                 <div class="header-btn d-none d-md-block">
-                  <a href="#" class="btn btn-primary">Register</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform" class="btn btn-primary">Register</a>
                 </div>
 
                 <!-- Header Toggle Start -->
@@ -286,7 +286,7 @@
                   <span>Cosmoverse Side Event</span>
                 </h2>
                 <div class="header-btn" data-aos-delay="900" data-aos="fade-up">
-                  <a class="btn-2" href="#">Register Now</a>
+                  <a class="btn-2" href="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform">Register Now</a>
                 </div>
               </div>
             </div>
@@ -2341,7 +2341,7 @@
                 <!-- Footer Newsletter Start -->
                 <div class="footer-newsletter">
                   <div class="footer-newsletter-form">
-                    <form action="#">
+                    <form action="https://docs.google.com/forms/d/e/1FAIpQLScEWHTVJL_MfS0W8eL0f1jDBZfxtDI33cslL5CJO8GUzALZ_A/viewform">
                       <input type="text" placeholder="Your Email" />
                       <button class="btn btn-primary">Register</button>
                     </form>
