--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1238,6 +1238,18 @@
           ></a>
             </ul>
         </div>
+        <div id="Sponsors" class="our-clients">
+          <br />
+           <div class="meeta-section-title-2 text-center">
+            <h2 class="main-title">Supporter</h2>
+              <ul>
+            <a href="https://trioblockchainlabs.com/">
+              <li>
+                <img src="assets/images/TriO_basic-file.png" alt="" />
+                <img src="assets/images/TriO_basic-file.png" alt="" /></li
+            ></a>
+              </ul>
+          </div>
          <!-- <div class="meeta-section-title-2 text-center">
           <h2 class="main-title">Diamond Sponsors</h2>
             <ul>
