block earner added

--- a/ABSummit/index.html
+++ b/ABSummit/index.html
@@ -1241,12 +1241,17 @@
         <div id="Sponsors" class="our-clients">
           <br />
            <div class="meeta-section-title-2 text-center">
-            <h2 class="main-title">Supporter</h2>
+            <h2 class="main-title">Supporters</h2>
               <ul>
             <a href="https://trioblockchainlabs.com/">
               <li>
                 <img src="assets/images/TriO_basic-file.png" alt="" />
                 <img src="assets/images/TriO_basic-file.png" alt="" /></li
+            ></a>
+            <a href="https://blockearner.com.tr/">
+              <li>
+                <img src="assets/images/block-earner.png" alt="" />
+                <img src="assets/images/block-earner.png" alt="" /></li
             ></a>
               </ul>
           </div>
